# ax

./: .env.example  .gitignore  AGENT.md  API.md  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TODO.md  compose.yml  diesel.toml  justfile
.agents/: AGENTS.md
ai/: Cargo.toml
ai/examples/: test_connection.rs
ai/src/: lib.rs  models.rs  openai.rs
ax-tauri/: package-lock.json  package.json
backend/query/: Cargo.toml  build.rs
backend/query/migrations/2024-08-05-062938_create_table_users/: up.sql
backend/query/migrations/2024-08-05-062942_create_table_files/: up.sql
backend/query/migrations/2024-08-05-063110_add_fk_files_user_id/: up.sql
backend/query/migrations/2024-08-05-072107_add_fk_users_profile_picture/: up.sql
backend/query/migrations/2024-08-08-125548_create_table_posts/: up.sql
backend/query/migrations/2024-08-08-135150_add_trigger_posts_user_name/: up.sql
backend/query/migrations/2024-08-08-135152_insert_post_data/: up.sql
backend/query/migrations/2024-08-08-135156_add_fk_posts_user_id/: up.sql
backend/query/migrations/2024-08-08-135159_add_fk_posts_reply_to/: up.sql
backend/query/migrations/2024-08-12-040951_create_table_post_actions/: up.sql
backend/query/migrations/2024-08-12-041005_create_table_reactions/: up.sql
backend/query/migrations/2024-08-12-044136_add_fk_reactions/: up.sql
backend/query/migrations/2024-08-12-044138_add_trigger_reactions_reaction_name/: up.sql
backend/query/migrations/2024-08-12-044138_add_trigger_reactions_reaction_name_id/: up.sql
backend/query/migrations/2024-08-12-044921_add_trigger_posts_reaction/: up.sql
backend/query/migrations/2024-08-12-051404_insert_reactions_data/: up.sql
backend/query/migrations/2024-08-12-120651_create_table_comments/: up.sql
backend/query/migrations/2024-08-12-120700_create_table_comment_reactions/: up.sql
backend/query/migrations/2024-08-12-120800_add_trigger_comments_reactions_name_id/: up.sql
backend/query/migrations/2024-08-12-121820_add_trigger_comments_reactions/: up.sql
backend/query/migrations/2024-08-12-122617_insert_comments_data/: up.sql
backend/query/src/: filter.rs  lib.rs  schema.rs  sort.rs  user.rs
backend/query/src/entities/: comment.rs  comment_reaction.rs  file.rs  mod.rs  post.rs  reaction.rs  user.rs
backend/server/: Cargo.toml
backend/server/src/: lib.rs  main.rs
backend/server/src/handlers/: comment.rs  comment_reaction.rs  file.rs  post.rs  reaction.rs  user.rs
backend/server/src/response/: error.rs
backend/server/src/routes/: api.rs  comment.rs  comment_reaction.rs  file.rs  post.rs  reaction.rs  user.rs
backend/server/src/session/: log_session.rs  mod.rs  ws_session.rs
design/: progress.graffle
docs/: book.toml
ez_stock/: Cargo.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
migrations/: 20240914094337_add_users_table.sql  20240914094435_add_reactions_table.sql  (+10 more)
model_server/: Dockerfile  (+3 more)
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: lib.rs
tweet_server/: Ax_2024-08-26T09_02_03.017Z.sql  Cargo.toml  Dockerfile  README.md
tweet_server/migrations/: 20240827080547_init.sql  20240827081111_user_demo.sql  20240909092917_add_trigger_posts_user_name.sql  20240914094411_add_files_table.sql  20240914094435_add_reactions_table.sql  20240914094452_add_posts_table.sql  20240914094454_add_posts_demo.sql  20240914094455_add_comments_table.sql  20240914094456_add_trigger_comments_username.sql  20240914094457_add_trigger_posts_like_dislike.sql  20240914094458_add_table_user_stats.sql  20240914094459_add_trigger_user_stats.sql  20240914094460_add_function_user_stats.sql
tweet_server/src/: errors.rs  lib.rs  main.rs  state.rs
tweet_server/src/dbaccess/: comment.rs  file.rs  mod.rs  post.rs  reaction.rs  user.rs
tweet_server/src/extractors/: api_response.rs  data.rs  mod.rs  pagination.rs  request.rs  response.rs  response_pagination.rs  session.rs
tweet_server/src/handlers/: auth.rs  comment.rs  file.rs  file_ops.rs  mod.rs  post.rs  reaction.rs  user.rs
tweet_server/src/infra/: db.rs  hash.rs  log.rs  mkdir.rs  mod.rs
tweet_server/src/libraries/: data.rs  dbop.rs  fileop.rs  hash.rs  log.rs  mkdir.rs  mod.rs  session.rs
tweet_server/src/libraries/req/: pagination.rs  request.rs
tweet_server/src/libraries/request/: mod.rs
tweet_server/src/libraries/resp/: api_response.rs  data.rs  mod.rs  pagination.rs  response.rs
tweet_server/src/libraries/response/: response.rs
tweet_server/src/models/: auth.rs  comment.rs  file.rs  mod.rs  post.rs  reaction.rs  user.rs
tweet_server/src/routes/: auth.rs  comment.rs  file.rs  general.rs  mod.rs  post.rs  reaction.rs  stats.rs  user.rs
tweet_server/src/services/: features.rs  ml_predict.rs  mod.rs  queue.rs  recommend.rs
tweet_server/src/services/features/: user.rs
tweet_server/src/services/ml/: predict.rs
tweet_server/src/services/recommend/: post.rs
tweet_server/src/utils/: test.rs
(+187 files in other folders)
