[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
