[package]
name = "tweet_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "*"
actix-rt = "2.7.0"
# actix-ws = "0.3.0"
actix-session = { version = "0.9.0", features = ["redis-actor-session"] }
actix-redis = "0.13.0"
actix-cors = "0.7.0"
serde = { version = "1.0.204", features = ["derive"] }
env_logger = "0.11.5"
colored = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
# Database access
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "uuid",
] }
# Environment access
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.8"
bcrypt = "0.15.1"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
