[package]
name = "tweet_server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
actix-web = "*"
actix-rt = "2.7.0"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-redis = "0.13.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
futures = "0.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
env_logger = "0.11.5"
colored = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
# Database access
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
# Environment access
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.8"
bcrypt = "0.15.1"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
percent-encoding = "2.3.1"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
juniper = "0.16.1"
