[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
query = { path = "../query" }
actix-session = { version = "0.9.0", features = ["redis-actor-session"] }
actix-redis = "0.13.0"
actix-cors = "0.7.0"
shared = { path = "../shared" }
colored = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.2", features = [
    "r2d2",
    "postgres",
    "uuid",
    "chrono",
] }
actix-multipart = "0.7.2"
env_logger = "0.11.5"
futures = "0.3" # or the version you need
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
percent-encoding = "2.3.1"
async-stream = "0.3.5"
lazy_static = "1.5.0"
actix-ws = "0.3.0"
